syntax = "proto3";

option csharp_namespace = "GrpcServiceJWT";

package jwt;

service JwtSender {
  rpc SendJwt (JwtRequest) returns (JwtReply);
}

message JwtRequest {
  string name = 1;
}

message JwtReply {
  string message = 1;
}
